# code-kata-2023

./: README.md
php/: README.md  composer.json  phpunit.xml
python/: .gitignore  README.md  pyproject.toml
python/tests/: test_basic.py
src/: app.ts
src/test/: app.test.ts
ts/: README.md  package.json
ts/src/test/: app.test.ts
